# junction-core-os

./: .gitignore  README.md  docker-compose.yml
docs/: control-api-spec.md  junction-vs-blackmagic-combined-report.md  node-agent-gpu-heartbeat-schema.md  runbook-standby.md  system-overview-and-datasheets.md
os-core/: 10-bond0.netdev  10-eth-bond.network  20-bond0.network  cluster.json  kernel_rt.config  make_image.sh  node-ip-map.json  optimize.sh  remap_nodes.py
os-core/node-agent/: Cargo.toml
os-core/node-agent/src/: main.rs
os-core/scripts/: junction-reconcile-role.sh
os-core/systemd/: junction-node-agent.service  junction-reconcile-role.path  junction-reconcile-role.service  junction-reconcile-role.timer  junction-remap-listener.service  junction-thermal-watchdog.service
scripts/: junction-standby-sync.sh
services/archive-node/: Dockerfile
services/command-center/: Dockerfile
services/iso-recorder/: Cargo.toml  Dockerfile
services/iso-recorder/src/: main.rs
services/output-router/: Cargo.toml  README.md
services/output-router/src/: main.rs
services/vision/: Cargo.toml  Dockerfile
services/vision/src/: main.rs
shared/proto/: junction.proto
ui/dashboard/: .env.local.example  middleware.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
ui/dashboard/app/: globals.css  layout.tsx  page.tsx
ui/dashboard/backups/: backup-2026-04-29T14-45-09-131Z.json
ui/dashboard/data/: broadcast-profiles.json  fiber-link.json  gpu-modules.json  graphics-assets.json  graphics-show.json  hardware-activation.json  link-balancer.json  users.json  (+12 more)
(+77 files in other folders)
