[package]
name = "junction-output-router"
version = "0.1.0"
edition = "2021"
description = "Bridges on-net NDI sources to dashboard-defined publish names (PGM / MV / aux)"

[[bin]]
name = "junction-output-router"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
ndi = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
ureq = { version = "2", features = ["json"] }
